@@ -1,0 +1,14 @@
+@@install_dir@@/var/log/panda/*log {
+    rotate 180
+    daily
+    compress    
+    missingok
+    notifempty
+    sharedscripts
+    daily       
+    prerotate
+    endscript
+    postrotate
+	/sbin/service httpd-pandaproxy graceful > /dev/null 2>/dev/null || true
+    endscript
+}
