@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/18/2015
+  * added logrotate.d
+
 * 4/29/2015
   * fixed S3I/F to return StatusCode
 
